<resources>
    <string name="app_name">RoomDB</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="age">Age</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="register">REGISTER</string>
    <string name="login">LOGIN</string>
    <string name="email">Email</string>
    <string name="update">UPDATE</string>
    <string name="nama">Nama</string>
    <string name="already_have_account">Already have account?</string>
    <string name="logout">LOGOUT</string>
</resources>