<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#008B8B"
    tools:context=".ProfileActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="163dp"
        android:layout_height="167dp"
        android:layout_marginEnd="124dp"
        android:layout_marginRight="124dp"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="30dp"
        android:contentDescription=""
        app:layout_constraintBottom_toTopOf="@id/textViewName"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="ContentDescription,MissingConstraints"
        tools:srcCompat="@drawable/profil" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_note"
        android:visibility="gone"
        android:layout_width="410dp"
        android:layout_height="291dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="MissingConstraints,UnknownId" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="215dp"
        android:layout_height="38dp"
        android:gravity="center_horizontal"
        android:text="@string/nama"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/updateBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="196dp"
        android:background="#FFA500"
        android:text="@string/update"
        android:textColor="#ffffff"
        app:layout_constraintTop_toBottomOf="@id/textViewName"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/logoutBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="196dp"
        android:background="#FFA500"
        android:text="@string/logout"
        android:textColor="#ffffff"
        app:layout_constraintTop_toBottomOf="@id/updateBtn"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>